加入了一个新的工具

--- a/generator.html
+++ b/generator.html
@@ -14,7 +14,7 @@
       }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/noisejs@2.1.0/index.min.js"></script>
-    <script src="generator.js" type="module"></script>
+    <script src="./generator.js" type="module"></script>
     <style>
       :root {
         --bg: rgb(30, 30, 30);
