--- a/index.html
+++ b/index.html
@@ -118,16 +118,21 @@
       </header>
 
       <div class="grid">
-        <a href="bezier.html" class="item">
+        <a href="./bezier.html" class="item">
           <div class="icon">🐙</div>
           <div class="title">贝塞尔曲线生成工具</div>
-          <div class="desc">适用于CooStackParticle的贝塞尔曲线生成工具</div>
+          <div class="desc">适用于CooParticlesAPI的贝塞尔曲线生成工具</div>
         </a>
 
-        <a href="generator.html" class="item">
+        <a href="./generator.html" class="item">
           <div class="icon">💬</div>
           <div class="title">粒子发射器可视化</div>
-          <div class="desc">用于生成CooStackParticle代码</div>
+          <div class="desc">用于生成CooParticlesAPI代码</div>
+        </a>
+        <a href="./pointsbuilder.html" class="item">
+          <div class="icon">·</div>
+          <div class="title">粒子PointsBuilder构建器</div>
+          <div class="desc">用于生成PointsBuilder代码</div>
         </a>
       </div>
 
