--- a/pointsbuilder.html
+++ b/pointsbuilder.html
@@ -64,7 +64,13 @@
                         <input id="chkAutoFit" type="checkbox" checked />
                         <span>自动缩放</span>
                     </label>
-                    <label class="chk"><input id="chkSnapGrid" type="checkbox">吸附网格</label>
+                    <label class="chk">
+                        <input id="chkSnapGrid" type="checkbox">
+                        吸附网格
+                        <span style="opacity:.7; margin-left:6px;">步长</span>
+                        <input id="inpSnapStep" type="number" value="1" step="0.1" min="0.000001"
+                               style="width:72px; height:24px; margin-left:6px;">
+                    </label>
                 </div>
             </div>
             <div id="threeHost" class="three-host"></div>
