完善PB的功能

--- a/bezier.html
+++ b/bezier.html
@@ -337,6 +337,7 @@
         border: 1px solid var(--line2);
         background: rgba(0, 0, 0, 0.18);
         color: var(--text);
+        text-decoration: none;
         cursor: pointer;
         font-weight: 750;
         font-size: 12px;
@@ -425,6 +426,7 @@
       <div class="surface">
         <div class="topbar">
           <div class="title">
+            <a class="btn ghost" href="./index.html">返回主页</a>
             <h1>Bezier Curve Editor</h1>
             <span id="modeBadge" class="badge accent">VALUE</span>
             <span id="targetBadge" class="badge">target=(1.00,1.00)</span>
