--- a/generator.html
+++ b/generator.html
@@ -21,6 +21,7 @@
     <div class="app">
       <header class="topbar">
         <div class="brand">
+          <a class="btn smallBtn" href="./index.html">返回主页</a>
           <div class="dot"></div>
           <div>
             <div class="title">粒子发射器可视化</div>
