--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <span class="dot yellow" aria-hidden="true"></span>
               <span class="dot green" aria-hidden="true"></span>
             </div>
-            <div class="code-file" aria-label="文件名">Intellij IDEA- ClassParticleEmitters.kt</div>
+            <div class="code-file" aria-label="文件名">Intellj IDEA- ClassParticleEmitters.kt</div>
           </div>
 
           <div class="code-scroll codeflow-box" id="codeBox">
